test/TestSuite/Syntax/Errors/sorting_crit_exptd1.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
}

htmltaskreport "report.html" {
# MARK: error 9 sorting_crit_exptd1
	sorttasks plan.start.foo.bar
}

